--- a/frontend/fitness-club/src/components/User/Dashboard/UserDashboard/UserDashboard.css
+++ b/frontend/fitness-club/src/components/User/Dashboard/UserDashboard/UserDashboard.css
@@ -7,3 +7,35 @@
 a {
   text-decoration: none;
 }
+
+.headericonDumbell {
+  color: rgba(199, 199, 199, 0.55);
+}
+
+.headerDumbell:hover .headericonDumbell {
+  color: rgba(33, 116, 194, 0.8);
+}
+
+.iconheaderMeal {
+  color: rgba(199, 199, 199, 0.55);
+}
+
+.headerMeal:hover .iconheaderMeal {
+  color: rgba(86, 192, 130, 0.8);
+}
+
+.iconheaderRequest {
+  color: rgba(199, 199, 199, 0.55);
+}
+
+.headerRequest:hover .iconheaderRequest {
+  color: rgba(28, 164, 182, 0.8);
+}
+
+.iconheaderShopping {
+  color: rgba(199, 199, 199, 0.55);
+}
+
+.headerShopping:hover .iconheaderShopping {
+  color: rgba(226, 190, 31, 0.8);
+}
