--- a/frontend/fitness-club/src/components/User/BMI/bmicard.css
+++ b/frontend/fitness-club/src/components/User/BMI/bmicard.css
@@ -1,7 +1,32 @@
-.blinking {
-  animation: blinkingText 1.3s infinite;
+/*Empty*/
+.blinkingEmpty {
+  animation: blinkingTextEmpty 1.3s infinite;
 }
-@keyframes blinkingText {
+
+@keyframes blinkingTextEmpty {
+  0% {
+    color: #f008dc;
+  }
+  49% {
+    color: #f008dc;
+  }
+  60% {
+    color: #f008dc;
+  }
+  99% {
+    color: transparent;
+  }
+  100% {
+    color: #f008dc;
+  }
+}
+
+/*Healthy*/
+
+.blinkingHealthy {
+  animation: blinkingTextHealthy 1.3s infinite;
+}
+@keyframes blinkingTextHealthy {
   0% {
     color: #10c716;
   }
@@ -16,5 +41,28 @@
   }
   100% {
     color: #10c716;
+  }
+}
+
+/*Underweight and OverWeigth*/
+
+.blinkingUnderOverWeight {
+  animation: blinkingTextUnderOverWeight 1.3s infinite;
+}
+@keyframes blinkingTextUnderOverWeight {
+  0% {
+    color: #ca2929;
+  }
+  49% {
+    color: #ca2929;
+  }
+  60% {
+    color: #ca2929;
+  }
+  99% {
+    color: transparent;
+  }
+  100% {
+    color: #ca2929;
   }
 }
