--- a/frontend/fitness-club/src/components/User/Charts/WeightLineChart/WeightLineChart.css
+++ b/frontend/fitness-club/src/components/User/Charts/WeightLineChart/WeightLineChart.css
@@ -3,6 +3,13 @@
   width: 95% !important;
 }
 
+.weightLineChart {
+  transition: all 0.4s ease-in-out;
+}
+.weightLineChart:hover {
+  transform: scale(1.05);
+}
+
 @media only screen and (max-width: 770px) {
   .weightLineChart {
     width: 100% !important;
