--- a/frontend/fitness-club/src/components/User/Dashboard/Cards/UserDashboardNoPackage.css
+++ b/frontend/fitness-club/src/components/User/Dashboard/Cards/UserDashboardNoPackage.css
@@ -1,6 +1,10 @@
+.headerOptions {
+  transition: all 0.4s ease-in-out;
+}
+
 .headerOptions:hover {
-  transform: scale(1.1);
-  transition: 0.2s;
+  transform: scale(1.09);
+  transition: 0.4s;
   text-decoration: none;
 }
 
