--- a/frontend/fitness-club/src/components/Home/BasicFancyGallery.css
+++ b/frontend/fitness-club/src/components/Home/BasicFancyGallery.css
@@ -32,3 +32,11 @@
   padding-top: 5px !important;
   padding-bottom: 5px !important;
 }
+
+.HomePageImageCard {
+  transition: all 0.4s ease-in-out;
+}
+
+.HomePageImageCard:hover {
+  transform: scale(1.05);
+}
